// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`react-from-dom > should convert a fragment 1`] = `
<div
  data-testid="wrapper"
>
  Hello, world!
  <div>
    I'm inside a \`div\`.
  </div>
</div>
`;

exports[`react-from-dom > should convert a search form from a string 1`] = `
<div
  data-testid="wrapper"
>
  <form
    _lpchecked="1"
    action="/search"
    autocomplete="off"
    class="search-bar"
    id="search"
    method="get"
  >
    <h1>
      Search
    </h1>
    
  Human
  
    <label
      for="pet-select"
    >
      Choose a pet:
    </label>
    <select
      id="pet-select"
    >
      <option
        value=""
      >
        --Please choose an option--
      </option>
      <option
        value="dog"
      >
        Dog
      </option>
      <option
        value="cat"
      >
        Cat
      </option>
    </select>
    <input
      checked=""
      name="visible"
      type="checkbox"
      value="on"
    />
    <div
      class="ps-relative"
    >
      <input
        aria-label="Search"
        autocomplete="off"
        class="s-input s-input__search js-search-field "
        maxlength="240"
        name="q"
        placeholder="Search…"
        type="text"
      />
      <svg
        aria-hidden="true"
        class="svg-icon s-input-icon s-input-icon__search iconSearch"
        height="18"
        viewBox="0 0 18 18"
        width="18"
      >
        <path
          d="M18 16.5l-5.14-5.18h-.35a7 7 0 1 0-1.19 1.19v.35L16.5 18l1.5-1.5zM12 7A5 5 0 1 1 2 7a5 5 0 0 1 10 0z"
        />
      </svg>
    </div>
  </form>
</div>
`;

exports[`react-from-dom > should convert an SVG from a string 1`] = `
<svg
  height="6px"
  preserveAspectRatio="xMidYMid"
  version="1.1"
  viewBox="0 0 20 6"
  width="20px"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  
    
  <defs>
    
        
    <path
      d="M3,6 C1.34314575,6 0,4.65685425 0,3 C0,1.34314575 1.34314575,0 3,0 C4.65685425,0 6,1.34314575 6,3 C6,4.65685425 4.65685425,6 3,6 Z M10,6 C8.34314575,6 7,4.65685425 7,3 C7,1.34314575 8.34314575,0 10,0 C11.6568542,0 13,1.34314575 13,3 C13,4.65685425 11.6568542,6 10,6 Z M17,6 C15.3431458,6 14,4.65685425 14,3 C14,1.34314575 15.3431458,0 17,0 C18.6568542,0 20,1.34314575 20,3 C20,4.65685425 18.6568542,6 17,6 Z"
      id="path-1"
    />
    
        
    <radialgradient
      cx="50%"
      cy="50%"
      fx="50%"
      fy="50%"
      gradientTransform="translate(0.500000,0.500000),scale(0.300000,1.000000),rotate(180.000000),translate(-0.500000,-0.500000)"
      id="radialGradient-3"
      r="166.666667%"
    >
      
            
      <stop
        offset="0%"
        stop-color="#F8E71C"
      />
      
            
      <stop
        offset="100%"
        stop-color="#FF0044"
      />
      
        
    </radialgradient>
    
    
  </defs>
  
    
  <g>
    
        
    <mask
      id="mask-2"
      style="fill: #fff;"
    >
      
            
      <use
        xlink:href="#path-1"
      />
      
        
    </mask>
    
        
    <polygon
      fill="url(#radialGradient-3)"
      fill-rule="nonzero"
      mask="url(#mask-2)"
      points="0 0 20 0 20 6 0 6"
      style="z-index: 100"
    />
    
    
  </g>
  

</svg>
`;

exports[`react-from-dom > should convert an SVG from a string 2`] = `
<div
  data-testid="wrapper"
>
  <svg
    height="6px"
    preserveAspectRatio="xMidYMid"
    version="1.1"
    viewBox="0 0 20 6"
    width="20px"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M3,6 C1.34314575,6 0,4.65685425 0,3 C0,1.34314575 1.34314575,0 3,0 C4.65685425,0 6,1.34314575 6,3 C6,4.65685425 4.65685425,6 3,6 Z M10,6 C8.34314575,6 7,4.65685425 7,3 C7,1.34314575 8.34314575,0 10,0 C11.6568542,0 13,1.34314575 13,3 C13,4.65685425 11.6568542,6 10,6 Z M17,6 C15.3431458,6 14,4.65685425 14,3 C14,1.34314575 15.3431458,0 17,0 C18.6568542,0 20,1.34314575 20,3 C20,4.65685425 18.6568542,6 17,6 Z"
        id="path-1"
      />
      <radialgradient
        cx="50%"
        cy="50%"
        fx="50%"
        fy="50%"
        gradientTransform="translate(0.500000,0.500000),scale(0.300000,1.000000),rotate(180.000000),translate(-0.500000,-0.500000)"
        id="radialGradient-3"
        r="166.666667%"
      >
        <stop
          offset="0%"
          stop-color="#F8E71C"
        />
        <stop
          offset="100%"
          stop-color="#FF0044"
        />
      </radialgradient>
    </defs>
    <g>
      <mask
        id="mask-2"
        style="fill: #fff;"
      >
        <use
          xlink:href="#path-1"
        />
      </mask>
      <polygon
        fill="url(#radialGradient-3)"
        fill-rule="nonzero"
        mask="url(#mask-2)"
        points="0 0 20 0 20 6 0 6"
        style="z-index: 100;"
      />
    </g>
  </svg>
</div>
`;

exports[`react-from-dom > should convert an SVG with style and script from a string 1`] = `
<div
  data-testid="wrapper"
>
  <svg
    height="400px"
    preserveAspectRatio="xMidYMid"
    version="1.1"
    viewBox="0 0 600 400"
    width="600px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <style>
      
      @import url(main.css);
    
    </style>
    <style>
      
      circle:last-child {
        fill: green;
      }
    
    </style>
    <script
      type="text/javascript"
    >
      
      
        function change(evt) {
          var target = evt.target;
          var radius = target.getAttribute("r");

          if (radius == 200) {
            radius = 100;
          } else {
            radius = 200;
          }

          target.setAttribute("r", radius);
        }
      
    
    </script>
    <g>
      <circle
        cx="200"
        cy="200"
        fill="#DDDDDD"
        r="200"
      />
      <circle
        cx="400"
        cy="200"
        fill="#000000"
        fill-opacity="0.8"
        r="200"
      />
    </g>
  </svg>
</div>
`;

exports[`react-from-dom > should convert an audio from Node 1`] = `
<div
  data-testid="wrapper"
>
  <audio
    controls=""
    src="https://interactive-examples.mdn.mozilla.net/media/examples/t-rex-roar.mp3"
  >
    Your browser does not support the audio element.
  </audio>
</div>
`;

exports[`react-from-dom > should convert an iframe from a string 1`] = `
<div
  data-testid="wrapper"
>
  <iframe
    allow="autoplay; encrypted-media"
    allowfullscreen=""
    frameborder="0"
    height="270"
    src="https://www.youtube.com/embed/kemF0xdmsaY?feature=oembed"
    width="480"
  />
</div>
`;

exports[`react-from-dom > should handle UTF8 text 1`] = `
<div
  data-testid="wrapper"
>
  <svg>
    <tspan
      baseline-shift="0%"
      fill="#E4E9F2"
      font-family="斯柯达体"
      font-size="20"
      xml:space="preserve"
    >
      眼观：仪表盘、车辆
    </tspan>
  </svg>
</div>
`;

exports[`react-from-dom > should handle actions 1`] = `
<div
  data-testid="wrapper"
>
  <div
    class="panel panel--fixed"
  >
    <div
      class="panel-header"
    >
      <h2>
        Title
      </h2>
    </div>
    <div
      class="panel-content"
    >
      <ol>
        <li>
          line 1
        </li>
        <li>
          line 2
        </li>
      </ol>
      <p>
        
      This Element has a 
        <code>
          style
        </code>
         attribute.
        <br />
        
      It also shows how to use the 
        <code>
          parser
        </code>
        -argument
    
      </p>
      <p>
         
      </p>
      <p>
        
      This is the second paragraph
    
      </p>
      <img />
      EMPTY
    
      <div />
      <code>
        throw new Error('Fail');
      </code>
      <dl />
    </div>
  </div>
</div>
`;

exports[`react-from-dom > should handle broken markup 1`] = `
<div
  data-testid="wrapper"
>
  <div>
    <span>
      los
    </span>
  </div>
</div>
`;
